# socket-programming

./: README.md  pyproject.toml
data/: html.html  text.txt
src/: main.py
