[tool.poetry]
name = "socket-programming"
version = "0.1.0"
description = ""
authors = ["kkido <kkido>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.942"
pylint = "^2.13.5"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
